fix icon alignment on buttons for firefox

--- a/client/scss/imports/_add-button.scss
+++ b/client/scss/imports/_add-button.scss
@@ -42,9 +42,11 @@
 }
 .btn__icon-img {
   opacity: .64;
+  display: block;
 }
 .btn__icon-text {
   margin-left: .5em;
+  white-space: nowrap;
 }
 &:hover, &:focus {
   .btn__icon-img {
@@ -54,7 +56,7 @@
 
 .dat-header-action {
   .btn__icon-img {
-    width: 100%;
+    width: 1rem;
     max-width: 1.25rem;
     max-height: 1rem;
   }
